--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://example.com
+baseURL: https://hugo-theme-salt.okdyy75.com
 languageCode: ja
 title: Hugo用ブログテーマ「Salt」
 googleAnalytics: 
