GitHub Pagesデプロイ時に各ファイルをリネームして使えるように

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,8 @@ jobs:
 
     - name: Build
       run: |
+        mv config.org.yml config.yml
+        mv exampleContent content
         npm run build
 
     - name: Deploy
