--- a/config.org.yml
+++ b/config.org.yml
@@ -2,7 +2,7 @@ baseURL: https://hugo-theme-salt.okdyy75.com
 languageCode: ja
 # theme: hugo-theme-salt
 title: Hugo用ブログテーマ「Salt」
-googleAnalytics: 
+googleAnalytics: G-XXXXXXXXXX
 
 taxonomies:
   category: categories
