サイト名変更

--- a/config.org.yml
+++ b/config.org.yml
@@ -1,7 +1,7 @@
 baseURL: https://hugo-theme-salt.okdyy75.com
 languageCode: ja
 # theme: hugo-theme-salt
-title: Hugo用ブログテーマ「Salt」
+title: シンプルなHugoブログテーマ「Salt」
 googleAnalytics: G-XXXXXXXXXX
 
 taxonomies:
