Disqusコメント機能対応

--- a/config.org.yml
+++ b/config.org.yml
@@ -3,6 +3,7 @@ languageCode: ja
 # theme: hugo-theme-salt
 title: Hugoブログテーマ「Salt」
 googleAnalytics: G-XXXXXXXXXX
+disqusShortname:
 
 taxonomies:
   category: categories
