--- a/config.org.yml
+++ b/config.org.yml
@@ -2,7 +2,7 @@ baseURL: https://hugo-theme-salt.okdyy75.com
 languageCode: ja
 # theme: hugo-theme-salt
 title: Hugoブログテーマ「Salt」
-googleAnalytics: G-XXXXXXXXXX
+googleAnalytics:
 disqusShortname:
 
 taxonomies:
