--- a/config.org.yml
+++ b/config.org.yml
@@ -2,6 +2,7 @@ baseURL: https://hugo-theme-salt.okdyy75.com
 languageCode: ja
 # theme: hugo-theme-salt
 title: Hugoブログテーマ「Salt」
+copyright: © 2021 my_name
 googleAnalytics:
 disqusShortname:
 
@@ -67,10 +68,6 @@ params:
       zenn: zenn
       email: email@example.com
       other: https://example.com
-  copyright:
-    author: 作者
-    link: https://example.com
-    year: 2021
 
 menu:
   header:
