--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ pages:
     mv exampleContent content
     mv config.org.yml config.yml
     sed -ie "s|baseURL:.*|baseURL: https://okdyy75.com|" config.yml
+    echo 'google.com, pub-9459277760652211, DIRECT, f08c47fec0942fa0' > static/ads.txt
     echo '<script data-ad-client="ca-pub-9459277760652211" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>' >> ./layouts/partials/head-add.html
     npm run build
   artifacts:
