--- a/config.org.yml
+++ b/config.org.yml
@@ -68,7 +68,7 @@ params:
       zenn: zenn
       email: email@example.com
       other: https://example.com
-  twitterTimeline: twitter
+  twitterTimeline:
 
 menu:
   header:
