--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "github-markdown-css": "^4.0.0",
-    "hugo-bin": "^0.76.1"
+    "hugo-bin": "^0.76.1",
+    "lunr": "^2.3.9",
+    "lunr-languages": "^1.9.0"
   }
 }
