--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,16 @@ pages:
     mv exampleContent content
     mv config.org.yml config.yml
     sed -ie "s|baseURL:.*|baseURL: https://okdyy75.com|" config.yml
+    sed -ie "s|googleAnalytics:.*|googleAnalytics: G-LR5GBHW5M5|" config.yml
+    sed -ie "s|my_name|okdyy75|" config.yml
+    sed -ie "s|name: ユーザー名|name: okdyy75|" config.yml
+    sed -ie "s|description: プロフィール|description: Hugo用ブログテーマ「Salt」を作りました|" config.yml
+    sed -ie "s|twitter: twitter|twitter: okdyy75|" config.yml
+    sed -ie "s|github: github|github: okdyy75|" config.yml
+    sed -ie "s|qiita: qiita|qiita: okdyy75|" config.yml
+    sed -ie "s|zenn: zenn|zenn: okdyy75|" config.yml
+    sed -ie "s|email: email@example.com|email: okdyy75@gmail.com|" config.yml
+    sed -ie "s|other: https://example.com|other: https://github.com/okdyy75|" config.yml
     echo 'google.com, pub-9459277760652211, DIRECT, f08c47fec0942fa0' > static/ads.txt
     echo '<script data-ad-client="ca-pub-9459277760652211" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>' >> ./layouts/partials/head-add.html
     npm run build
