--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "create-ranking": "node scripts/create-ranking.js",
-    "build": "hugo --minify",
+    "build": "hugo --gc --minify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
