--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,14 +35,19 @@ jobs:
         mv exampleContent content
         mv config.org.yml config.yml
         sed -ie "s|my_name|okdyy75|" config.yml
+        sed -ie "s|my_email@example.com|okdyy75@gmail.com|" config.yml
+        sed -ie "s|https://example.com/my_url|https://github.com/okdyy75|" config.yml
         sed -ie "s|name: ユーザー名|name: okdyy75|" config.yml
         sed -ie "s|description: プロフィール|description: Hugo用ブログテーマ「Salt」を作りました|" config.yml
         sed -ie "s|twitter: twitter|twitter: okdyy75|" config.yml
         sed -ie "s|github: github|github: okdyy75|" config.yml
         sed -ie "s|qiita: qiita|qiita: okdyy75|" config.yml
         sed -ie "s|zenn: zenn|zenn: okdyy75|" config.yml
-        sed -ie "s|email: email@example.com|email: okdyy75@gmail.com|" config.yml
-        sed -ie "s|other: https://example.com|other: https://github.com/okdyy75|" config.yml
+        sed -ie "s|name: my_organization|name: okdyy|" config.yml
+        sed -ie "s|url: https://example.com/publisher|url: https://github.com/okdyy75|" config.yml
+        sed -ie "s|description: organization_description|description: Hugo用ブログテーマ「Salt」を作りました|" config.yml
+        sed -ie "s|https://example.com/sameAs|https://twitter.com/okdyy75|" config.yml
+        sed -ie "s|twitterTimeline: twitter|twitterTimeline:|" config.yml
         echo '<script>let isLoaded = false; window.addEventListener( "scroll", function () { if (isLoaded) { return; } if (document.documentElement.scrollTop != 0 || document.body.scrollTop != 0) { (function () { const GoogleAdSenseId = "ca-pub-9459277760652211"; let e = document.createElement("script"); e.type = "text/javascript"; e.crossorigin = "anonymous"; e.async = true; e.src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=" + GoogleAdSenseId; document.body.appendChild(e); })(); (function () { const GoogleAnalyticsId = "G-LR5GBHW5M5"; let e = document.createElement("script"); e.type = "text/javascript"; e.async = true; e.src = "https://www.googletagmanager.com/gtag/js?id=" + GoogleAnalyticsId; document.body.appendChild(e); window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag("js", new Date()); gtag("config", GoogleAnalyticsId); })(); isLoaded = true; } }, true );</script>' >> ./layouts/partials/body-add.html
         npm run build
 
