baseURLをデフォルトに合わせる

--- a/config.org.yml
+++ b/config.org.yml
@@ -1,4 +1,4 @@
-baseURL: https://hugo-theme-salt.okdyy75.com
+baseURL: https://hugo-theme-salt.okdyy75.com/
 languageCode: ja
 # theme: hugo-theme-salt
 title: Hugoブログテーマ「Salt」
