--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
-# Hugo default output directory
-/public
-/node_modules
+# @link https://github.com/github/gitignore/blob/main/community/Golang/Hugo.gitignore
+# Generated files by hugo
+/public/
+/resources/_gen/
+/assets/jsconfig.json
+hugo_stats.json
+
+# Executable may be added to repository
+hugo.exe
+hugo.darwin
+hugo.linux
+
+# Temporary lock file while building
+/.hugo_build.lock
 
 ## OS Files
 # Windows
@@ -12,5 +23,7 @@ $RECYCLE.BIN/
 # OSX
 .DS_Store
 
+# others
+node_modules
 .gcp
 .ssh
