--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
         sed -ie "s|name: my_organization|name: okdyy75|" config.yml
         sed -ie "s|url: https://example.com/publisher|url: https://github.com/okdyy75|" config.yml
         sed -ie "s|description: organization_description|description: Hugo用ブログテーマ「Salt」を作りました|" config.yml
-        sed -ie "s|https://example.com/sameAs|https://twitter.com/okdyy75|" config.yml
+        sed -ie "s|https://example.com/sameAs|https://x.com/okdyy75|" config.yml
         sed -ie "s|twitterTimeline: twitter|twitterTimeline:|" config.yml
         echo '<script>let isLoaded = false; window.addEventListener( "scroll", function () { if (isLoaded) { return; } if (document.documentElement.scrollTop != 0 || document.body.scrollTop != 0) { (function () { const GoogleAdSenseId = "ca-pub-9459277760652211"; let e = document.createElement("script"); e.type = "text/javascript"; e.crossorigin = "anonymous"; e.async = true; e.src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=" + GoogleAdSenseId; document.body.appendChild(e); e.onload = function(){ document.querySelector("header .google-auto-placed").remove(); } })(); (function () { const GoogleAnalyticsId = "G-LR5GBHW5M5"; let e = document.createElement("script"); e.type = "text/javascript"; e.async = true; e.src = "https://www.googletagmanager.com/gtag/js?id=" + GoogleAnalyticsId; document.body.appendChild(e); window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag("js", new Date()); gtag("config", GoogleAnalyticsId); })(); isLoaded = true; } }, true );</script>' >> ./layouts/partials/body-add.html
         npm run build
