hugo-binアップデート

--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@google-analytics/data": "^4.7.0",
     "dayjs": "^1.11.11",
     "github-markdown-css": "^5.5.1",
-    "hugo-bin": "^0.123.1",
+    "hugo-bin": "^0.144.6",
     "lunr": "^2.3.9",
     "lunr-languages": "^1.14.0"
   },
   "hugo-bin": {
-    "buildTags": "extended"
+    "buildTags": "extended",
+    "version": "0.147.5"
   }
 }
