feat: CWV対策としてLCP改善のため画像のlazy load機能を実装 - config.ymlにimageLazyLoadフラグを追加（デフォルト: true） - Markdownの画像をlazy load対応するrender-hookを追加 - 全ショートコード（custom-figure, blog-card, self-blog-card）をlazy load対応 - 全パーシャル（article-card, related-article, sidebar, 404）をlazy load対応 - LCP画像（single.htmlのサムネイル、プロフィールアイコン）はlazy loadしない設計 Fixes #34

--- a/config.org.yml
+++ b/config.org.yml
@@ -70,6 +70,7 @@ params:
   rankingArticleLimit: 5
   relatedArticleLimit: 2
   imageQuality: 75
+  imageLazyLoad: true
   profile:
     name: ユーザー名
     description: プロフィール
