ruby-versionを明示的に指定

--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -18,6 +18,8 @@ jobs:
           fetch-depth: 0
 
       - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 'ruby'
 
       - name: Create a release pull request
         run: |
