--- a/.github/workflows/create-ranking.yml
+++ b/.github/workflows/create-ranking.yml
@@ -15,6 +15,8 @@ jobs:
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: develop
 
       - name: Setup npm
         uses: actions/setup-node@v4
